# trainwreck

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  devenv.nix
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  serve.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: gtfs-realtime.proto
crates/core/src/: lib.rs
crates/core/src/gtfs/: archive.rs  data.rs  error.rs  mod.rs  model.rs  query.rs
crates/core/src/realtime/: client.rs  mod.rs  model.rs  proto.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: api.rs  lib.rs  state.rs  time.rs
crates/web/src/components/: api_key.rs  departure_board.rs  file_upload.rs  header.rs  mod.rs  stop_search.rs
crates/web/style/: main.css
src/: gtfs.rs  main.rs  realtime.rs
src/gtfs/: archive.rs  error.rs  model.rs  query.rs
src/realtime/: client.rs  error.rs  model.rs
