[package]
name = "trainwreck"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trainwreck"
path = "src/main.rs"

[dependencies]
trainwreck-core = { path = "../core" }
clap        = { version = "4.6.0",  default-features = false, features = ["derive", "env", "std", "help", "usage"] }
jiff        = { version = "0.2.23", default-features = false, features = ["std", "tzdb-bundle-always"] }
tokio       = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
color-eyre  = { version = "0.6.5",  default-features = false }
