[package]
name = "trainwreck"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trainwreck"
path = "src/main.rs"

[features]
embed-web = ["dep:rust-embed"]

[dependencies]
rust-embed = { version = "8", optional = true }
trainwreck-core = { path = "../core" }
clap       = { version = "4.6.1",  default-features = false, features = ["derive", "env", "std", "help", "usage"] }
jiff       = { version = "0.2.24", default-features = false, features = ["std", "tzdb-bundle-always"] }
tokio      = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "macros", "net"] }
color-eyre = { version = "0.6.5",  default-features = false }
axum       = { version = "0.8",    default-features = false, features = ["http1", "json", "tokio", "query"] }
tower-http = { version = "0.6",    default-features = false, features = ["fs"] }
serde      = { version = "1.0",    default-features = false, features = ["derive"] }
serde_json = { version = "1.0",    default-features = false, features = ["std"] }
