[package]
name = "trainwreck-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
web = []

[dependencies]
serde     = { version = "1.0.228",  default-features = false, features = ["derive"] }
csv       = { version = "1.4.0",    default-features = false }
zip       = { version = "8.5.1",    default-features = false, features = ["deflate"] }
jiff      = { version = "0.2.23",   default-features = false, features = ["std", "tzdb-bundle-always"] }
thiserror = { version = "2.0.18",   default-features = false }
prost     = { version = "0.14.3",   default-features = false, features = ["derive", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
tokio   = { version = "1.51.1", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest              = { version = "0.13.2", default-features = false, features = ["json"] }
wasm-bindgen-futures = "0.4"

[build-dependencies]
prost-build = { version = "0.14.3", default-features = false }
protox      = { version = "0.9",    default-features = false }
