[package]
name = "trainwreck-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core is still needed for Route::transport_css_class_for used in the UI.
# The `web` feature (GtfsData) is no longer required — data comes from the server.
trainwreck-core = { path = "../core" }

leptos               = { version = "0.8", features = ["csr"] }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

gloo-timers = { version = "0.4", features = ["futures"] }

web-sys = { version = "0.3", features = [
    "HtmlInputElement",
] }
js-sys   = "0.3"
serde    = { version = "1.0", default-features = false, features = ["derive"] }
jiff     = { version = "0.2.23", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
